@@ -29,6 +29,7 @@
         <cache name="screen.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
         <cache name="screen.template.mode" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
         <cache name="screen.template.location" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
+        <cache name="screen.find.path" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
 
         <cache name="resource.xml-actions.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
         <cache name="resource.groovy.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
