@@ -53,6 +53,13 @@ New Features:
     theme)
   - Links are now disabled when going to a screen the user is not
     authorized for along with failed transition condition
+  - Screen paths can now start with a // and be a sparse path where each
+    name in the path is searched for in the subscreen hierarchy from the
+    root screen; can also find content this way; note that this may
+    involve loading a lot of screen definitions and in dev mode will be
+    a LOT slower, but in production (cache timeouts turned off) the full
+    expanded path is cached as are the screen definitions so there is very
+    little overhead
 - Entity Facade:
   - Added in operator (_op) for searchFormInputs/search-form-inputs
   - Added entity.field.@default attribute with a Groovy expression to set a
